# mobel

./: DOCS.md  LICENSE  Makefile  README.md  conftest.py  make.bat  pytest.ini  setup.cfg  test.py
.github/workflows/: codeql-analysis.yml  python-publish.yml  test.yml
src/Mobel/: __init__.py  annotation.py  common.py  decorator.py  pipe.py
tests/: test_Mobel.py  test_annotation.py  test_decorator.py  test_pipe.py
