[metadata]
name = mobel
version = 0.1.1
author = youssefj
author_email = jbili.jbili.youssef@gmail.com
description = improved decorator support
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/youssefj1/mobel
license = MIT License
project_urls =
    Bug Tracker = https://github.com/youssefj1/mobel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
test_suite = tests

[options.packages.find]
where = src
